--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,23 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+
+.slideIn{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #0a0808;
+  transform-origin: bottom;
+}
+
+.slideOut{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #0a0808;
+  transform-origin: top;
+}
