prallax scroll part 1 done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,3 +148,32 @@ nav {
     }
 }
 
+.gallery{
+  height: 175vh;
+  display: flex;
+  flex-direction: row;
+  gap: 2vw;
+  padding: 2vw;
+  box-sizing: border-box;
+  overflow: hidden;
+  .column{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+    min-width: 250px;
+    .imageContainer{
+      width: 100%;
+      height: 100%;
+      position: relative;
+      border-radius: 1vw;
+      overflow: hidden;
+      img{
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+
