--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,6 +163,7 @@ nav {
     flex-direction: column;
     gap: 2vw;
     min-width: 250px;
+    position: relative;
     .imageContainer{
       width: 100%;
       height: 100%;
@@ -172,6 +173,18 @@ nav {
       img{
         object-fit: cover;
       }
+    }
+    &:nth-of-type(1){
+      top: -45%;
+    }
+    &:nth-of-type(2){
+        top: -95%;
+    }
+    &:nth-of-type(3){
+        top: -45%;
+    }
+    &:nth-of-type(4){
+        top: -75%;
     }
   }
 }
